tests/suites/3_stateful_sharing/01_sharing/01_0000_basic_sharing.result
drop test share and database
prepare shared database and table
OUTBOUND test_share test_database shared_tenant shared_tenant,to_tenant
get shared database and table from same tenant
INBOUND test_share test_database shared_tenant shared_tenant
1
2
3
4
5
6
get shared database and table from another tenant
INBOUND test_share test_database to_tenant to_tenant
INBOUND test_share test_database shared_tenant to_tenant
1
2
3
4
5
6
cannot grant a database which create from share
ERROR 1105 (HY000) at line 1: CannotShareDatabaseCreatedFromShare. Code: 2718, Text = Cannot share database 'shared_db' which created from share.
alter table add column and query table data again
1,1
2,1
3,1
1,1
2,1
3,1
alter table drop column and query table data again
1
1
1
1
1
1
drop shared table and query data from share
ERROR 1105 (HY000) at line 1: UnknownTable. Code: 1025, Text = error: 
  --> SQL:1:15
  |
1 | SELECT * FROM shared_db.t1
  |               ^^^^^^^^^^^^ Unknown table `shared_db`.`t1` in catalog 'default'

.
ERROR 1105 (HY000) at line 1: UnknownTable. Code: 1025, Text = error: 
  --> SQL:1:15
  |
1 | SELECT * FROM shared_db.t1
  |               ^^^^^^^^^^^^ Unknown table `shared_db`.`t1` in catalog 'default'

.
drop shared database and query data from share
4
5
6
4
5
6
ERROR 1105 (HY000) at line 1: ShareStorageError. Code: 2719, Text = share "test_share" storage error: HTTP status "Bad Request".
ERROR 1105 (HY000) at line 1: ShareStorageError. Code: 2719, Text = share "test_share" storage error: HTTP status "Bad Request".
all is good
